[package]
name = "token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4.1.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { version="2.2.0", default-features = false, features = ["psp22"] }

[lib]
name = "token"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16